# server_orc_fdw

./: .gitignore  CMakeLists.txt  Makefile  README.MD  READNE.txt  caller.c  city.orc  exe  genOrcLibBridge  go  hello.cpp  hello.h  mylog.txt  orcLibBridge.cpp  orcLibBridge.h  orc_fdw--1.0.1.sql  orc_fdw.c  orc_fdw.control  orc_fdw.h  orc_reader.c  orc_reader.h
orcInclude/: ColumnPrinter.hh  Int128.hh  MemoryPool.hh  OrcFile.hh  Reader.hh  Vector.hh  orc-config.hh
testDataFile/: city.txt  test_data1.orc  test_data1.txt
